Work in progress login/sessions/cookies
Added debug msgs. Sessions stored in db. Cookies sent to client. Login button authenticates users. Need to implement protected routes based on logged user.

--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -20,8 +20,8 @@ html
               a.nav-link.btn.btn-default(href='/exercise-list') Exercises
             li.nav-item
               a.nav-link.btn.btn-default(href='/dashboard/calendar') Calendar
-            li.nav-item
-              a.nav-link.btn.btn-default(href='/dashboard') Dashboard
+            //- li.nav-item
+            //-   a.nav-link.btn.btn-default(href='/dashboard') Dashboard
             li.nav-item
               a.nav-link.btn.btn-default(href='/login-form') Login
             li.nav-item
