--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -1,15 +1,16 @@
 doctype html
 html
   head
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title= title
-    link(rel='stylesheet', href='/stylesheets/bootstrap/bootstrap.min.css')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel="stylesheet", href="/stylesheets/bootstrap/bootstrap.min.css")
+    link(rel="stylesheet", href="/stylesheets/style.css")
+    link(rel="icon" href="/images/favicon.ico")
     block css
   body
     nav.navbar.navbar-expand-md
       .container
-        a#home.navbar-brand.btn.btn-default(href='/') home
+        a#home.navbar-brand.btn.btn-default(href="/") home
         button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation")
           span.navbar-toggler-icon
 
@@ -17,15 +18,15 @@ html
         #navbarToggle.navbar-collapse.collapse
           ul.navbar-nav.center.ml-auto
             li.nav-item
-              a.nav-link.btn.btn-default(href='/exercise-list') Exercises
+              a.nav-link.btn.btn-default(href="/exercise-list") Exercises
             li.nav-item
-              a.nav-link.btn.btn-default(href='/dashboard/calendar') Calendar
+              a.nav-link.btn.btn-default(href="/dashboard/calendar") Calendar
             //- li.nav-item
-            //-   a.nav-link.btn.btn-default(href='/dashboard') Dashboard
+            //-   a.nav-link.btn.btn-default(href="/dashboard") Dashboard
             li.nav-item
-              a.nav-link.btn.btn-default(href='/login-form') Login
+              a.nav-link.btn.btn-default(href="/login-form") Login
             li.nav-item
-              a.nav-link.btn.btn-default(href='/register-form') Register
+              a.nav-link.btn.btn-default(href="/register-form") Register
 
     block content
 
@@ -36,7 +37,7 @@ html
     script(src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous")
     script(src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous")
     script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous")
-    script(src='/javascripts/bootstrap/bootstrap.min.js')
-    script(src='/javascripts/layout.js')
+    script(src="/javascripts/bootstrap/bootstrap.min.js")
+    script(src="/javascripts/layout.js")
 
     block scripts
