authentication & authorization middlewares
auth.js is for checking if user is logged in and admin.js is for checking if user is admin. All API level. Need to fix client to communicate better with user.

--- a/app_server/views/error.pug
+++ b/app_server/views/error.pug
@@ -1,6 +1,10 @@
 extends layout
 
 block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+  .container.main-content
+    .row.mb-4.mt-5
+      .col-12.text-center
+        h1= message
+        h2= error.status
+      .col-12
+        pre #{error.stack}
