Login & Logout WORKS!!!

--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -27,6 +27,8 @@ html
               a.nav-link.btn.btn-default(href="/login-form") Login
             li.nav-item
               a.nav-link.btn.btn-default(href="/register-form") Register
+            li.nav-item
+              a#logout-btn.nav-link.btn.btn-danger(href="/logout") Logout
 
     block content
 
