--- a/app_server/views/login-form.pug
+++ b/app_server/views/login-form.pug
@@ -15,6 +15,8 @@ block content
               .alert.alert-success(role='alert') New user registered!
             when 'login_success'
               .alert.alert-success(role='alert') Login successful!
+            when 'logged_out'
+              .alert.alert-warning(role='alert') Logged out
       //- Email
       .row.mt-5
         .col-md-6.text-center.mx-auto
