--- a/app_server/views/exercise-form.pug
+++ b/app_server/views/exercise-form.pug
@@ -4,7 +4,7 @@ block content
   .container.main-content
     .row.mb-4.mt-5
       .col-12
-        .display-4.text-center.mb-4 Add a new exercise to the database
+        h1.text-center.mb-4 Add a new exercise to the database
     form(action='', method='post', role='form')
       .row
         .col-12.text-center
