--- a/app_server/views/register-form.pug
+++ b/app_server/views/register-form.pug
@@ -3,7 +3,7 @@ block content
   .container.main-content
     .row.mb-4.mt-5
       .col-12
-        .display-4.text-center.mb-4 Create Your QuickFit Account
+        h1.text-center.mb-4 Create Your QuickFit Account
     form.row(action='', method='post', role='form')
       .col-12.text-center
         case error
