--- a/app_server/views/exercise-list.pug
+++ b/app_server/views/exercise-list.pug
@@ -50,7 +50,7 @@ mixin colorCodeByGroup(exercise)
 block content
   .container.main-content
     .row.justify-content-center.mb-3.mt-5
-      .display-4.text-center Exercise Selection
+      h1.text-center Exercise Selection
 
     .row.justify-content-center.mb-3
       a.btn.btn-default(href='/exercise-list/add') Add New
