--- a/app_server/views/login-form.pug
+++ b/app_server/views/login-form.pug
@@ -1,8 +1,11 @@
 extends layout
 block content
   .container.main-content.form
+    .row.mt-5
+      .col-12
+        h1.text-center Login to QuickFit
     form(action='', method='post', role='form')
-      .row.mt-5
+      .row
         .col-12.text-center
           case msg
             when 'postdata_incomplete'
