--- a/app_server/views/program-list.pug
+++ b/app_server/views/program-list.pug
@@ -3,7 +3,7 @@ block content
   .container.main-content
     .row.justify-content-center.mt-5
       .col-12.text-center.mb-3
-        .display-4 Available Programs
+        h1 Available Programs
       .col-12.col-md-4
         each program in programs
           #program-list.card.text-center
