--- a/app_server/views/questionnaire.pug
+++ b/app_server/views/questionnaire.pug
@@ -2,7 +2,7 @@ extends layout
 block content
   .container.main-content
     .row.mt-5
-      .col-12.display-4.text-center= question
+      h1.col-12.text-center= question
 
     //- Saved Choices
     .row.justify-content-center.my-5
