--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,12 +17,37 @@
   --dark: #1B1B1B;
 }
 
+
+/* -------------------------------------------------------------------------- */
+/*                                    Fonts                                   */
+/* -------------------------------------------------------------------------- */
+
+@font-face {
+  font-family: 'cmu-bright';
+  src: url('../fonts/cmunbmr.ttf')
+}
+
+@font-face {
+  font-family: 'typo-quick';
+  src: url('../fonts/typo-quik-regular.woff');
+}
+
+@font-face {
+  font-family: 'bavro';
+  src: url('../fonts/bavro-regular.woff');
+}
+
+
+
 /* -------------------------------------------------------------------------- */
 /*                                   General                                  */
 /* -------------------------------------------------------------------------- */
 * {
   margin: 0;
   padding: 0;
+  font-family: jubilat, serif;
+  font-style: normal;
+  font-weight: 100;
 }
 
 /* Have extra space at bottom so that you can scroll down past the fixed footer.
@@ -31,8 +56,12 @@ html {
   margin-bottom: 300px;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+h2, h3, h4, h5, h6 {
+  font-family: 'typo-quick';
+}
+
+h1 {
+  font-family: 'bavro';
 }
 
 body {
@@ -67,6 +96,7 @@ body {
 /* -------------------------------------------------------------------------- */
 .navbar {
   background-color: var(--dissipate);
+  font-family: 'typo-quick';
 }
 
 .navbar-toggler-icon {
@@ -90,6 +120,10 @@ body {
 /* -------------------------------------------------------------------------- */
 .btn {
   margin: 3px
+}
+
+button, .btn {
+  font-family: 'typo-quick';
 }
 
 .btn-group-xs>.btn, .btn-xs {
@@ -195,6 +229,7 @@ a.button {
 a.exercise {
   color: black;
   text-decoration: none;
+  font-family: 'typo-quick';
 }
 
 a.exercise:hover {
