--- a/app_server/views/register-form.pug
+++ b/app_server/views/register-form.pug
@@ -24,7 +24,7 @@ block content
             .input-group-prepend
               span.input-group-text#inputGroup-sizing-default Name:
             input.form-control(required type='text' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='first' name='firstName')
-            input.form-control(required type='text' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='last' name='lastName')
+            input.form-control(type='text' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='last (optional)' name='lastName')
 
         //- Email
         .row.mb-5
