--- a/app_server/views/dashboard.pug
+++ b/app_server/views/dashboard.pug
@@ -1,52 +1,8 @@
 extends layout
 block content
   .container-fluid.main-content
-    h4.text-center.greeting.mt-5 Hi&nbsp;#{username}
+    h4.text-center.greeting.mt-5 Hi,&nbsp;#{username}
     .row.d-flex.justify-content-center
-      .col-4.my-programs
-        .row.font-weight-bold.box-title
-          .col-8
-            h4 My Programs
-          .text-center.col-4
-            button.btn.btn-default.btn-lg.my-2.add-button Add
-        .col-12.program-list
-          .row
-            .col-8 Program 1
-            .col-4.text-center.buttons
-              button Make Active
-              button Delete
-          .row
-            .col-8 Program 2
-            .col-4.text-center.buttons
-              button Deactivate
-              button Delete
-      .col-2.current-program
-        .box-title.font-weight-bold Current Program
-        .text-center Sunday
-        .text-center
-          div Some Stuff
-            input(type="checkbox")
-          div Some Stuff
-            input(type="checkbox")
-          div Some Stuff
-            input(type="checkbox")
-          div Some Stuff
-            input(type="checkbox")
-          div Some Stuff
-            input(type="checkbox")
-      .col-4.nutrition
-        .font-weight-bold.box-title Nutrition
-        div Calories
-        div Add item
-        div Carbohydrates
-        div Add item
-        div Protein
-        div Add item
-        div Fats
-        div Add item
-    br
-    br
-    br
-    .row.d-flex.justify-content-center
-      a.btn.btn-default(href="/dashboard/account") Account
+      a.btn.btn-default(href="/dashboard/exercise-list") Your exercises
       a.btn.btn-default(href="/dashboard/calendar") Calendar View
+      a.btn.btn-default(href="/dashboard/account") Account
