Fixed db duplicate user bug
Made exercise names not unique. Fixed typo is exercise-list.

--- a/app_server/views/exercise-list.pug
+++ b/app_server/views/exercise-list.pug
@@ -43,7 +43,7 @@ block content
           h1 #{username}'s exercises
         - else
           h1 Exercise Selection
-          p Once logged in, you can add delete from this list.
+          p Once logged in, you can add and delete from this list.
 
     - if (locals.authenticated)
       .row.justify-content-center.mb-3
