--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -3,9 +3,10 @@ html
   head
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title=locals.site.name+title
+    link(rel="icon" href="/images/favicon.ico")
     link(rel="stylesheet", href="/stylesheets/bootstrap/bootstrap.min.css")
     link(rel="stylesheet", href="/stylesheets/style.css")
-    link(rel="icon" href="/images/favicon.ico")
+    link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap")
     block css
   body
     nav.navbar.navbar-expand-md
