Separated account-page and user-personal-info page

--- a/app_server/views/account.pug
+++ b/app_server/views/account.pug
@@ -3,64 +3,5 @@ block content
   .container.main-content
     .row.mb-4.mt-5
       .col-12.text-center
-        - if (changes == "true")
-          .alert.alert-success(role="alert")="User updated!"
-        - if (changes == "false")
-          .alert.alert-warning(role="alert")="No updates made"
-    .row.mt-5
-      .col-md-6.mx-auto
-        .card.parent-card
-          .card-body.px-0.pb-0
-            h3.card-title.px-1.text-center Personal information
-            form(action="", method="post", role="form").card.nested-card
-              .card-body.pt-3
-                .col-lg-6.input-group.mb-3.mx-auto
-                  .input-group-prepend
-                    span.input-group-text#inputGroup-sizing-default Weight:
-                  input.form-control(
-                    type="number"
-                    min=1
-                    max=700
-                    aria-label="Sizing example input"
-                    describedby="inputGroup-sizing-default"
-                    placeholder=weight+" kg"
-                    name="weight")
-
-                .col-lg-6.input-group.mb-3.mx-auto
-                  .input-group-prepend
-                    span.input-group-text#inputGroup-sizing-default Height:
-                  input.form-control(
-                    type="number"
-                    min=30
-                    max=300
-                    aria-label="Sizing example input"
-                    describedby="inputGroup-sizing-default"
-                    placeholder=height+" cm"
-                    name="height")
-
-                .col-lg-6.input-group.mb-3.mx-auto
-                  .input-group-prepend
-                    span.input-group-text#inputGroup-sizing-default gender:
-                  select.custom-select.form-control(
-                    type="text"
-                    aria-label="Sizing example input"
-                    describedby="inputGroup-sizing-default"
-                    name="gender")
-                    option(hidden selected disabled)= gender
-                    option= "male"
-                    option= "female"
-                    option= "other"
-
-                .col-lg-6.input-group.mb-2.mx-auto
-                  .input-group-prepend
-                    span.input-group-text#inputGroup-sizing-default Age:
-                  input.form-control(
-                    type="number"
-                    min=0
-                    max=150
-                    aria-label="Sizing example input"
-                    describedby="inputGroup-sizing-default"
-                    placeholder=age
-                    name="age")
-              .row.justify-content-center
-                button.col-lg-3.mx-4.mb-4.btn.btn-default Update
+        h1 Account Page
+        h4 Work in progress
