Improved exercise-list.pug code & exercise-info.pug

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -256,6 +256,10 @@ a.exercise:hover {
   color: white;
 }
 
+.badge-card {
+  background-color: white;
+}
+
 .badge-warning {
   margin-right: 2px;
 }
