--- a/app_server/views/exercise-info.pug
+++ b/app_server/views/exercise-info.pug
@@ -3,9 +3,29 @@ block content
   .container.main-content
     .row.mt-5
       .col-12
-        .card
-          .card-body
-            h1.text-center= exercise.name
+        .div(class=`card bg-${exercise.group.replace(' ', '-').toLowerCase()}`)
+          .card-body.mx-auto.px-5
+            h1.card-title.text-center= exercise.name
+
+          //- .card-body.px-5
+          //-   h4.card-title.mb-0 exer id
+          //-   |
+          //-   .badge.badge-card= exercise._id
+
+          .card-body.px-5
+            h4.card-title.mb-0 Muscle Group
+            |
+            .badge.badge-card= exercise.group
+
+
+          .card-body.px-5
+            h4.card-title.mb-0 Equipment options
+            .equipments.badge.badge-card
+              each equip in exercise.equip
+                span.badge.badge-warning= equip
+
+          .card-body.mx-auto.px-5.pb-5
+            h4.card-title.mb-0 Description
             .card
               .card-body
                 p= exercise.desc
