--- a/app_server/views/exercise-list.pug
+++ b/app_server/views/exercise-list.pug
@@ -1,40 +1,5 @@
 extends layout
 
-mixin printExercise(exercise)
-  .card-body
-    h4
-      a.exercise(href=`exercise/${exercise._id}`)= exercise.name
-    .equipments
-      each equip in exercise.equip
-        span.badge.badge-warning= equip
-
-mixin colorCodeByGroup(exercise)
-  case exercise.group
-    when "Chest"
-      .card.bg-chest
-        +printExercise(exercise)
-    when "Triceps"
-      .card.bg-triceps
-        +printExercise(exercise)
-    when "Upper back"
-      .card.bg-upper-back
-        +printExercise(exercise)
-    when "Biceps"
-      .card.bg-biceps
-        +printExercise(exercise)
-    when "Shoulders"
-      .card.bg-shoulders
-        +printExercise(exercise)
-    when "Core"
-      .card.bg-core
-        +printExercise(exercise)
-    when "Lower body"
-      .card.bg-lower-body
-        +printExercise(exercise)
-    default
-      .card.bg-secondary
-        +printExercise(exercise)
-
 block content
   .container.main-content
     .row.justify-content-center.mb-3.mt-5
@@ -59,8 +24,13 @@ block content
         .error.alert= message
         // Print each exercise
         each exercise in exercises
-          +colorCodeByGroup(exercise)
-            +printExercise(exercise)
+          div(class=`card bg-${exercise.group.replace(' ', '-').toLowerCase()}`)
+            .card-body
+              h4
+                a.exercise(href=`exercise/${exercise._id}`)= exercise.name
+              .equipments
+                each equip in exercise.equip
+                  span.badge.badge-warning= equip
 
 block scripts
   script(src='/javascripts/exercise-list.js')
